kubernetes/apps/liora/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    argocd.argoproj.io/sync-wave: '-2'
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8000
