kubernetes/apps/liora/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  annotations:
    argocd.argoproj.io/sync-wave: '-2'
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
